Project reference to Library was added, models folder was removed, migration data for ASP NET Core Identity was remove, namespace naming was fixed

--- a/src/OnlineShop.IdentityServer/OnlineShop.IdentityServer.csproj
+++ b/src/OnlineShop.IdentityServer/OnlineShop.IdentityServer.csproj
@@ -28,4 +28,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="6.0.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OnlineShop.Library\OnlineShop.Library.csproj" />
+  </ItemGroup>
 </Project>
