--- a/src/OnlineShop.UserManagementService/OnlineShop.UserManagementService.csproj
+++ b/src/OnlineShop.UserManagementService/OnlineShop.UserManagementService.csproj
@@ -6,4 +6,12 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OnlineShop.Library\OnlineShop.Library.csproj" />
+  </ItemGroup>
+
 </Project>
