--- a/src/OnlineShop.UserManagementService/appsettings.json
+++ b/src/OnlineShop.UserManagementService/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "UsersConnection": "Data Source=YAROSLAV;Initial Catalog=OnlineShop.Users;Integrated Security=True;Encrypt=False"
+  }
 }
