--- a/OnlineShop.ConsoleAppTestApp/OnlineShop.ConsoleAppTestApp.csproj
+++ b/OnlineShop.ConsoleAppTestApp/OnlineShop.ConsoleAppTestApp.csproj
@@ -7,4 +7,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\src\OnlineShop.Library\OnlineShop.Library.csproj" />
+  </ItemGroup>
+
 </Project>
