console test app was fixed

--- a/OnlineShop.ConsoleAppTestApp/OnlineShop.ConsoleAppTestApp.csproj
+++ b/OnlineShop.ConsoleAppTestApp/OnlineShop.ConsoleAppTestApp.csproj
@@ -17,4 +17,10 @@
     <ProjectReference Include="..\src\OnlineShop.Library\OnlineShop.Library.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
