--- a/OnlineShop.ConsoleAppTestApp/appsettings.json
+++ b/OnlineShop.ConsoleAppTestApp/appsettings.json
@@ -15,6 +15,6 @@
   },
   "ServiceAdressOptions": {
     "IdentityServer": "https://localhost:5001",
-    "UserManagementService": "http://localhost:5003"
+    "UserManagementService": "https://localhost:5003"
   }
 }
