--- a/src/OnlineShop.ConsoleAppTestApp/OnlineShop.ConsoleAppTestApp.csproj
+++ b/src/OnlineShop.ConsoleAppTestApp/OnlineShop.ConsoleAppTestApp.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\OnlineShop.Library\OnlineShop.Library.csproj" />
+    <ProjectReference Include="..\OnlineShop.Library\OnlineShop.Library.csproj" />
   </ItemGroup>
 
   <ItemGroup>
