Added rest scripts. Changed profile name for identity server in config file

--- a/src/OnlineShop.IdentityServer/Properties/launchSettings.json
+++ b/src/OnlineShop.IdentityServer/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "SelfHost": {
+    "OnlineShop.IdentityServer": {
       "commandName": "Project",
       "launchBrowser": true,
       "environmentVariables": {
