--- a/src/OnlineShop.ArticlesService/appsettings.json
+++ b/src/OnlineShop.ArticlesService/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "OrdersConnection": "Data Source=YAROSLAV;Initial Catalog=OnlineShop.Orders;Integrated Security=True;Encrypt=False"
+  }
 }
