Added integration with identity server for OrdersService and ArticlesService. API tests were updated to provide execution with integration

--- a/src/OnlineShop.ArticlesService/appsettings.json
+++ b/src/OnlineShop.ArticlesService/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "OrdersConnection": "Data Source=YAROSLAV;Initial Catalog=OnlineShop.Orders;Integrated Security=True;Encrypt=False"
+    "OrdersConnection": "Data Source=YAROSLAV;Initial Catalog=OnlineShop.Orders;Integrated Security=True;Encrypt=False",
+    "UsersConnection": "Data Source=YAROSLAV;Initial Catalog=OnlineShop.Users;Integrated Security=True;Encrypt=False"
   }
 }
