--- a/src/OnlineShop.ApiService/appsettings.json
+++ b/src/OnlineShop.ApiService/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "IdentityServerApiOptions": {
+    "ClientId": "test.client",
+    "ClientSecret": "511536EF-F270-4058-80CA-1C89C192F69A",
+    "Scope": "OnlineShop.Api",
+    "GrantType": "client_credentials"
+  },
+  "ServiceAdressOptions": {
+    "IdentityServer": "https://localhost:5001",
+    "UserManagementService": "https://localhost:5003"
+  }
 }
