Added integation of ArticlesService with ApiService. ArticlesController and PriceListsController were created for ApiService

--- a/src/OnlineShop.ApiService/appsettings.json
+++ b/src/OnlineShop.ApiService/appsettings.json
@@ -14,6 +14,7 @@
   },
   "ServiceAdressOptions": {
     "IdentityServer": "https://localhost:5001",
-    "UserManagementService": "https://localhost:5003"
+    "UserManagementService": "https://localhost:5003",
+    "ArticlesService": "https://localhost:5006"
   }
 }
