--- a/src/OnlineShop.ApiService/appsettings.json
+++ b/src/OnlineShop.ApiService/appsettings.json
@@ -15,6 +15,7 @@
   "ServiceAdressOptions": {
     "IdentityServer": "https://localhost:5001",
     "UserManagementService": "https://localhost:5003",
-    "ArticlesService": "https://localhost:5006"
+    "ArticlesService": "https://localhost:5006",
+    "OrdersService": "https://localhost:5005"
   }
 }
