Added integration with IdentityServer for ApiService. Also added SwaggerUI

--- a/src/OnlineShop.ApiService/OnlineShop.ApiService.csproj
+++ b/src/OnlineShop.ApiService/OnlineShop.ApiService.csproj
@@ -8,6 +8,8 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityModel" Version="6.0.0" />
+    <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="3.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.0.0" />
   </ItemGroup>
 
   <ItemGroup>
