--- a/src/OnlineShop.UserManagementService/appsettings.Docker.json
+++ b/src/OnlineShop.UserManagementService/appsettings.Docker.json
@@ -7,6 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "UsersConnection": "Data Source=host.docker.internal;Initial Catalog=OnlineShop.Users;User ID=sa;Password=pass12345;"
+    "UsersConnection": "Data Source=host.docker.internal,1433;Initial Catalog=OnlineShop.Users;User ID=sa;Password=pass12345;"
+  },
+  "ServiceAdressOptions": {
+    "IdentityServer": "https://192.168.0.100:5001"
   }
-}
+} 
