--- a/src/OnlineShop.UserManagementService/appsettings.json
+++ b/src/OnlineShop.UserManagementService/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "UsersConnection": "Data Source=YAROSLAV;Initial Catalog=OnlineShop.Users;Integrated Security=True;Encrypt=False"
+  },
+  "ServiceAdressOptions": {
+    "IdentityServer": "https://localhost:5001"
   }
 }
