Added docker file for ApiService. Implemented integration with IdentityServer container

--- a/src/OnlineShop.ArticlesService/appsettings.json
+++ b/src/OnlineShop.ArticlesService/appsettings.json
@@ -10,5 +10,8 @@
   "ConnectionStrings": {
     "OrdersConnection": "Data Source=YAROSLAV;Initial Catalog=OnlineShop.Orders;Integrated Security=True;Encrypt=False",
     "UsersConnection": "Data Source=YAROSLAV;Initial Catalog=OnlineShop.Users;Integrated Security=True;Encrypt=False"
+  },
+  "ServiceAdressOptions": {
+    "IdentityServer": "https://localhost:5001"
   }
 }
