Added logging for OrdersService. Fixed nlog config for UserManagementService

--- a/src/OnlineShop.OrdersService/nlog.config
+++ b/src/OnlineShop.OrdersService/nlog.config
@@ -13,11 +13,11 @@
   <!-- the targets to write to -->
   <targets>
     <!-- File Target for all log messages with basic details -->
-    <target xsi:type="File" name="allfile" fileName="d:\OnlineShop\temp\${shortdate}\UserManagementService\nlog-AspNetCore-all-UserManagementService-${shortdate}.log"
+    <target xsi:type="File" name="allfile" fileName="d:\OnlineShop\temp\${shortdate}\OrdersService\nlog-AspNetCore-all-OrdersService-${shortdate}.log"
             layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}" />
 
     <!-- File Target for own log messages with extra web details using some ASP.NET core renderers -->
-    <target xsi:type="File" name="ownFile-web" fileName="d:\OnlineShop\temp\${shortdate}\UserManagementService\nlog-AspNetCore-own-UserManagementService-${shortdate}.log"
+    <target xsi:type="File" name="ownFile-web" fileName="d:\OnlineShop\temp\${shortdate}\OrdersService\nlog-AspNetCore-own-OrdersService-${shortdate}.log"
             layout="${longdate}|${event-properties:item=EventId:whenEmpty=0}|${level:uppercase=true}|${logger}|${message} ${exception:format=tostring}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
 
     <!--Console Target for hosting lifetime messages to improve Docker / Visual Studio startup detection -->
@@ -35,7 +35,7 @@
     <!--Skip non-critical Microsoft logs and so log only own logs (BlackHole) -->
     <logger name="Microsoft.*" maxlevel="Info" final="true" />
     <logger name="System.Net.Http.*" maxlevel="Info" final="true" />
-    
+
     <logger name="*" minlevel="Info" writeTo="ownFile-web, lifetimeConsole" />
   </rules>
 </nlog>
