--- a/src/OnlineShop.IdentityServer/appsettings.json
+++ b/src/OnlineShop.IdentityServer/appsettings.json
@@ -1,4 +1,13 @@
 ﻿{
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
+    }
+  },
+  "AllowedHosts": "*",
+
   "ConnectionStrings": {
     "UsersConnection": "Data Source=YAROSLAV;Initial Catalog=OnlineShop.Users;Integrated Security=True;Encrypt=False",
     "IdentityServerConnection": "Data Source=YAROSLAV;Initial Catalog=OnlineShop.IdentityServer;Integrated Security=True;Encrypt=False"
