Created docker-compose file

--- a/asp_config.conf
+++ b/asp_config.conf
@@ -10,5 +10,5 @@ CN = localhost
 basicConstraints = critical, CA:FALSE
 keyUsage = critical, digitalSignature, keyEncipherment
 extendedKeyUsage = critical, serverAuth
-subjectAltName = critical, DNS:localhost, DNS:host.docker.internal, IP:192.168.0.101
+subjectAltName = critical, DNS:localhost, DNS:host.docker.internal, DNS:identity-server, DNS:user-management-service, DNS:orders-service, DNS:articles-service, DNS:api-service
 1.3.6.1.4.1.311.84.1.1 = DER:02
