--- a/src/OnlineShop.ApiService/appsettings.Docker.json
+++ b/src/OnlineShop.ApiService/appsettings.Docker.json
@@ -13,9 +13,9 @@
     "GrantType": "client_credentials"
   },
   "ServiceAdressOptions": {
-    "IdentityServer": "https://192.168.0.101:5001",
-    "UserManagementService": "https://host.docker.internal:5003",
-    "ArticlesService": "https://host.docker.internal:5007",
-    "OrdersService": "https://host.docker.internal:5005"
+    "IdentityServer": "https://identity-server:5001",
+    "UserManagementService": "https://user-management-service:5003",
+    "ArticlesService": "https://articles-service:5007",
+    "OrdersService": "https://orders-service:5005"
   }
 }
