--- a/src/OnlineShop.ArticlesService/appsettings.Docker.json
+++ b/src/OnlineShop.ArticlesService/appsettings.Docker.json
@@ -11,6 +11,6 @@
     "UsersConnection": "Data Source=host.docker.internal,1433;Initial Catalog=OnlineShop.Users;User ID=sa;Password=pass12345;"
   },
   "ServiceAdressOptions": {
-    "IdentityServer": "https://192.168.0.101:5001"
+    "IdentityServer": "https://identity-server:5001"
   }
 } 
